authorize di main
